<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/elige_el_juego_que_desees"
            android:textSize="40sp"
            android:layout_margin="8dp"/>

        <!--Adivina el numero-->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Image -->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="194dp"
                    android:src="@drawable/numbers"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/titB"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!-- Title y Button -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/titB"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                        />

                    <Button
                        style="@style/Widget.Material3.Button.ElevatedButton"
                        android:id="@+id/btnAdivina"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn"/>

                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <!--Ahorcado-->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Image -->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="194dp"
                    android:src="@drawable/hanged_man"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/titA"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!-- Title y Button -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/titA"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                        />

                    <Button
                        style="@style/Widget.Material3.Button.ElevatedButton"
                        android:id="@+id/btnAhorcado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn"/>

                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>