<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ahorcado">

    <TextView
        android:id="@+id/txtTit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/juego_del_ahorcado"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtIns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/encuentra_la_palabra" />

    <!--Este linear layout nos servira para mostrar una pista-->
    <TextView
        android:id="@+id/txtHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titAhor"
        android:textAlignment="center" />

    <!--Este apartado contiene las imagenes-->
    <!--Se hace uso de un relative layout dado que este nos permite alinear dos elementos
    por el borde derecho o hacer que uno esté por debajo del otro, en el centro de la pantalla,
    en el centro a la izquierda, y así sucesivamente.-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="15dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            app:srcCompat="@drawable/gallows" />

        <ImageView
            android:id="@+id/head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="108dp"
            android:paddingTop="23dp"
            android:visibility="invisible"
            app:srcCompat="@drawable/head" />

        <ImageView
            android:id="@+id/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="120dp"
            android:paddingTop="53dp"
            android:visibility="invisible"
            app:srcCompat="@drawable/body" />

        <ImageView
            android:id="@+id/armLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="100dp"
            android:paddingTop="60dp"
            android:visibility="invisible"
            app:srcCompat="@drawable/arm_left" />

        <ImageView
            android:id="@+id/armRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="123dp"
            android:paddingTop="60dp"
            android:visibility="invisible"
            app:srcCompat="@drawable/arm_right" />

        <ImageView
            android:id="@+id/legLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="101dp"
            android:paddingTop="90dp"
            android:visibility="invisible"
            app:srcCompat="@drawable/leg_left" />

        <ImageView
            android:id="@+id/legRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="121dp"
            android:paddingTop="90dp"
            android:visibility="invisible"
            app:srcCompat="@drawable/leg_right" />
    </RelativeLayout>

    <!--Este linear layout nos servira para mostrar el espacio para las palabras-->
    <LinearLayout
        android:id="@+id/word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:padding="10dp"
        android:gravity="center"
        android:orientation="horizontal"/>
    <!--Usaremos un GridView la cual es es un view que contiene otros views en forma de grilla o cuadricula-->
    <GridView
        android:id="@+id/keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:numColumns="5"
        android:padding="5dp"
        android:stretchMode="columnWidth"
        android:verticalSpacing="5dp"
        android:horizontalSpacing="5dp"/>
</LinearLayout>